[fix] : move stars behind and styling changes (#15)
* [fix] : move stars behind the pillars.

* [fix] : Styling changes

--- a/client/src/pages/Home/style.module.css
+++ b/client/src/pages/Home/style.module.css
@@ -28,6 +28,7 @@
 
 .titleCont {
   position: relative;
+  z-index: 20;
 }
 
 .main_title {
@@ -101,4 +102,5 @@
   height: 100%;
   bottom: 0;
   left: 0;
+  z-index:10;
 }
